# conserva

./: CMakeLists.txt  README.md  org.maldus512.conserva.yml
snap/: snapcraft.yaml
src/: main.cpp
src/adapters/: commands.cpp  commands.hpp  notifier.cpp  notifier.hpp  tray.cpp  tray.hpp
src/config/: app_config.h
src/controller/: controller.cpp  controller.hpp
src/model/: model.cpp  model.hpp
src/services/: socket_queue.cpp  socket_queue.hpp  stopwatch.cpp  stopwatch.hpp
